--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --primary-bg: #191919;
     --secondary-bg: #1b1b1b;
     --accent-color: #DE0909;
-    --accent-hover: #7d36d1;
+    --accent-hover: #DE0909;
     --text-color: #e2e2e2;
     --text-secondary: #6a6a6a;
     --card-bg: #1f1f1f;
